tests/errors/types/unknown_arg_type.ne
function a(arg: notExistingType)
{
    // do nothing
}

function main(): int32
{
    
}
